--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   "type": "commonjs",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "@playwright/test": "^1.52.0",
-    "playwright": "^1.52.0"
+    "@typescript-eslint/eslint-plugin": "^8.33.0",
+    "@typescript-eslint/parser": "^8.33.0",
+    "eslint": "^9.27.0",
+    "eslint-plugin-playwright": "^2.2.0",
+    "globals": "^16.2.0",
+    "playwright": "^1.52.0",
+    "typescript-eslint": "^8.33.0"
   }
 }
